<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Primum</string>
    <string name="device">Device</string>
    <string name="patient">Patient</string>
    <string name="device_id">Device ID</string>
    <string name="device_pass">Device pass</string>
    <string name="service_url">Service URL</string>
    <string name="service_user_name">Service user name</string>
    <string name="service_pass">Service pass</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="new_test">New Test</string>
    <string name="configuration">Configuration</string>
    <string name="patient_id">Patient ID</string>
    <string name="get">Get</string>
    <string name="name">Name</string>
    <string name="surname_1">Surname 1</string>
    <string name="surname_2">Surname 2</string>
    <string name="next">Next</string>
    <string name="birth_date">Birth date</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="back">Back</string>
    <string name="start_test">Start Test</string>
    <string name="test_finished_correctly">Test finished correctly!</string>
    <string name="test_finished_error">Test not performed, please ensure you are connecting the device.</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="electrocardiogram">Electrocardiogram</string>
    <string name="oxygen_in_blood">Oxygen in blood</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="not_all_preferences_set">Not all preferences set!</string>
    <string name="preferences_saved">Preferences saved</string>
    <string name="please_enter_a_valid_patient_id">Please enter a valid patient ID</string>
    <string name="loading_please_wait">Loading. Please wait&#8230;</string>
    <string name="user_not_found_please_enter_data_manually">User not found. Please enter data manually.</string>
    <string name="performing_test_please_wait">Performing test from patient %1$s. Please wait&#8230;</string>
    <string name="test_correctly_saved">Test correctly saved.</string>
    <string name="test_submited_correctly">Test submited correctly.</string>
    <string name="patient_password">Patient Password</string>
    <string name="patient_fixed">Patient fixed.</string>
    <string name="clear">Clear</string>
    <string name="select_one_test">Select one test.</string>
    <string name="language">Language</string>
    <string name="saving_test_please_wait">Saving test. Please wait.</string>
    <string name="submitting_test_please_wait">Submitting test. Please wait.</string>
    <string name="pulse">Pulse</string>
    <string name="network_connection_not_available_you_can_enter_data_manually">Network connection not available. You can enter data manually.</string>
    <string name="network_connection_not_available_test_has_been_saved_locally">Network connection not available. Test has been saved locally.</string>
    <string name="available_tests">Available tests</string>
    <string name="confirm_user">Confirm user</string>
    <string name="about">About</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="help">Help</string>
    <string name="choose_device_to_be_used">Choose device to be used.</string>
    <string name="perform_test">Perform %1$s with patient %2$s?</string>
    <string name="ELECTROCARDIOGRAM">electrocardiogram</string>
    <string name="OXIMETRY">oximetry</string>
    <string name="WEIGHT_TEST">weight test</string>
    <string name="PULSE_TEST">pulse test</string>
    <string name="test_time">Test time:</string>
    <string name="oxygen_saturation">Oxygen saturation:</string>
    <string name="pulse_rate">Pulse rate:</string>
    <string name="systolic">Systolic:</string>
    <string name="diastolic">Diastolic:</string>
    <string name="mean_arterial_presure">Mean arterial presure:</string>
    <string name="body_weight">Body weight:</string>
    <string name="body_height">Body height:</string>
    <string name="body_mass_index">Body mass index:</string>
    <string name="Oximetry">Oximetry</string>
    <string name="Glucometry">Glucometry</string>
    <string name="id"></string>
    <string name="retry">Retry</string>
    <string name="gender">Gender</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="unexpected_error_happened">Unexpected error happened</string>
    <string name="test_finished_error_retry">Test not performed, please ensure you are connecting the device. Would you like to retry?</string>
</resources>
