<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_tests"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



            <RadioGroup
                android:id="@+id/rgTests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" >

                <RadioButton
                    android:id="@+id/rbElectro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electrocardiogram"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/rbWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/rbOximetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oxygen_in_blood"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/rbPulse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pulse"
                    android:textColor="#000000" />
            </RadioGroup>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/start" />
    </LinearLayout>

</LinearLayout>